The Windows version of mongos needs an unhandled exception filter

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.3.2
    • Affects Version/s: None
    • Component/s: Sharding
    • Environment:
      Windows
    • Windows
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Access violations in mongos.exe are not logged the way they are in mongod.exe. We should port the code from db/db.cpp to s/server.cpp, or break it out into a shared source file, so that crashes in mongos.exe give us information we can use to debug the crash.

            Assignee:
            Tad Marshall
            Reporter:
            Tad Marshall
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: