SERVER-6716 Add Windows unhandled exception filter to mongos

Move code for displaying access violations and other unhandled exceptions
from mongo/db/db.cpp to a new mongo/util/exception_filter_win32.cpp file,
invoke it from mongod.exe and mongos.exe.